samples/_failures_safe/1761044004_467e6b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8da51095.c: In function ‘main’:
./samples/SAFE/__tmp_8da51095.c:154:20: error: missing terminating " character
  154 |             printf("%d\tUn
      |                    ^~~~~~~
./samples/SAFE/__tmp_8da51095.c:154:13: error: expected expression at end of input
  154 |             printf("%d\tUn
      |             ^~~~~~
./samples/SAFE/__tmp_8da51095.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8da51095.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8da51095.c:154:13: error: expected declaration or statement at end of input
